[package]
name = "uif2"
version = "0.1.0"
authors = ["Joshua Scarsbrook <jscarsbrook@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
ws = "0.9.2"
